--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=68", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "politipo"
 version = "0.1.5"
@@ -5,10 +9,24 @@ description = "A library for seamless type conversions between Python data struc
 authors = [{ name = "Kevin Saltarelli", email = "kevinqz@gmail.com" }]
 requires-python = ">=3.13"
 dependencies = [
-    "numpy>=2.2.4",
-    "pandas>=2.2.3",
-    "pandera>=0.23.1",
     "pydantic>=2.10.6",
+]
+
+[project.optional-dependencies]
+arrow = ["pyarrow>=22.0.0"]
+polars = ["polars>=1.35.2"]
+duckdb = ["duckdb>=1.4.2"]
+validation = ["pandera>=0.23.1"]
+pandas = ["pandas>=2.2.3"]
+sqlalchemy = ["sqlalchemy>=2.0.0"]
+# convenience extra
+all = [
+    "pyarrow>=22.0.0",
+    "polars>=1.35.2",
+    "duckdb>=1.4.2",
+    "pandera>=0.23.1",
+    "pandas>=2.2.3",
+    "sqlalchemy>=2.0.0",
 ]
 
 [dependency-groups]
@@ -23,6 +41,10 @@ dev = [
     "polars>=1.35.2",
     "duckdb>=1.4.2",
 ]
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+py-modules = ["politipo"]
 
 [tool.uv]
 # No custom fields; reserved for future uv settings.
