ci(uv): add coverage, pytest config, and tighten lint targets
- Ruff: target-version py313; exclude backups/.specstory.
- Black: target-version py313.
- Pytest: run src tests with coverage and threshold (85%).
- CI: run tests + coverage; keep uv-only workflow.
- Makefile: add cov target for local coverage runs.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,12 @@ jobs:
       - name: Type check (ty)
         run: uv run ty
 
-      - name: Tests (pytest)
+      - name: Tests + Coverage (pytest)
         env:
           PYTHONPATH: src
         run: uv run pytest -q
+
+      - name: Coverage summary
+        if: always()
+        run: |
+          echo "\nCoverage summary:" && ls -la || true
