--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ version = "0.1.5"
 description = "A library for seamless type conversions between Python data structures and models."
 authors = [{ name = "Kevin Saltarelli", email = "kevinqz@gmail.com" }]
 requires-python = ">=3.13"
+readme = "README.md"
 dependencies = [
     "pydantic>=2.10.6",
 ]
@@ -53,10 +54,30 @@ py-modules = ["politipo"]
 line-length = 100
 extend-exclude = [
     "legacy",
+    "backups",
+    ".specstory",
 ]
+target-version = "py313"
 
 [tool.ruff.lint]
 select = ["E", "F", "B", "I", "UP"]
 
 [tool.black]
 line-length = 100
+target-version = ["py313"]
+
+[tool.pytest.ini_options]
+testpaths = ["src"]
+addopts = "-ra --strict-markers --disable-warnings --maxfail=1 --cov=src --cov-report=term-missing --cov-fail-under=85"
+
+[tool.coverage.run]
+branch = true
+source = ["src"]
+
+[tool.coverage.report]
+show_missing = true
+skip_empty = true
+exclude_lines = [
+    "pragma: no cover",
+    "if __name__ == \"__main__\":",
+]
