test(robustness): add property-based and concurrency tests for Arrow/Polars/DuckDB

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dev = [
     "pre-commit>=3.7.0",
     "pytest>=7.0",
     "pytest-cov>=4.0",
+    "hypothesis>=6.95.0",
     "pyarrow>=22.0.0",
     "polars>=1.35.2",
     "duckdb>=1.4.2",
