build(ci): minimize dev deps; install extras via '.[all]' only when testing\n\n- Remove heavy data libs from dev group to keep env lean.\n- CI installs extras with 'uv pip install .[all]' before running tests.\n- Makefile: extras-all target and env-clean helper.\n

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Sync dependencies (dev)
         run: uv sync --group dev
 
+      - name: Install extras for tests
+        run: uv pip install '.[all]'
+
       - name: Lint (ruff)
         run: uv run ruff check .
 
