--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "politipo"
-version = "0.4.1"
+version = "0.4.2"
 description = "PolyType: Pydantic → Arrow → DuckDB/Polars with vectorized validation (Pandera)."
 authors = [{ name = "Kevin Saltarelli", email = "kevinqz@gmail.com" }]
 requires-python = ">=3.13"
@@ -75,6 +75,9 @@ filterwarnings = [
 [tool.coverage.run]
 branch = true
 source = ["src"]
+omit = [
+    "src/test_v040_refactor.py",
+]
 
 [tool.coverage.report]
 show_missing = true
